--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@android:color/white">
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="listener"
@@ -16,27 +15,36 @@
         android:gravity="center"
         tools:context=".ui.home.HomeActivity">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:contentDescription="@null"
-            android:scaleType="fitCenter"
-            android:src="@drawable/chat_application_logo"
-            app:layout_constraintBottom_toTopOf="@+id/application_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/application_name"
-            style="@style/AppTheme.HomeAppTitle"
-            android:layout_marginBottom="50dp"
-            android:text="@string/app_name"
-            android:textSize="@dimen/home_app_title_size"
+            android:layout_marginBottom="@dimen/home_title_margin_bottom"
+            android:gravity="center_horizontal"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" >
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/application_name"
+                android:layout_marginBottom="@dimen/home_img_margin_bottom"
+                android:layout_centerHorizontal="true"
+                android:contentDescription="@null"
+                android:scaleType="fitCenter"
+                android:src="@drawable/chat_application_logo" />
+
+            <TextView
+                android:id="@+id/application_name"
+                style="@style/AppTheme.HomeAppTitle"
+                android:layout_width="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="@string/app_name"
+                android:textSize="@dimen/home_app_title_size" />
+        </RelativeLayout>
+
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline"
