--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">20dp</dimen>
-    <dimen name="activity_vertical_margin">20dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <!-- Dimensions for buttons -->
     <dimen name="button_height">50dp</dimen>
     <dimen name="button_radius">6dp</dimen>
     <dimen name="button_text_size">20sp</dimen>
 
-    <dimen name="home_btn_margin_top">20dp</dimen>
+    <!-- Dimensions for Home Screen -->
+    <dimen name="home_title_margin_bottom">60dp</dimen>
+    <dimen name="home_btn_margin_top">16dp</dimen>
+    <dimen name="home_img_margin_bottom">-13dp</dimen>
     <dimen name="home_app_title_size">32sp</dimen>
+
+    <dimen name="snackbar_text_size">5sp</dimen>
+
 
 
 </resources>
