--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,22 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin">12dp</dimen>
+    <dimen name="activity_vertical_margin">12dp</dimen>
 
-    <!-- Dimensions for buttons -->
-    <dimen name="button_height">50dp</dimen>
+    <!-- Dimensions for Buttons -->
+    <dimen name="button_height">55dp</dimen>
     <dimen name="button_radius">6dp</dimen>
     <dimen name="button_text_size">20sp</dimen>
 
+    <!-- Dimensions for Gray Buttons -->
+    <dimen name="gray_button_height">35dp</dimen>
+    <dimen name="gray_button_text_size">16sp</dimen>
+    <dimen name="gray_button_min_width">80dp</dimen>
+
+    <!-- Dimensions for TextBox -->
+    <dimen name="textbox_height">55dp</dimen>
+    <dimen name="textbox_radius">6dp</dimen>
+    <dimen name="textbox_text_size">20sp</dimen>
+    <dimen name="textbox_padding">14dp</dimen>
+    <dimen name="textbox_error_size">20sp</dimen>
+    <dimen name="textbox_margin_bottom">5dp</dimen>
+
+    <!-- Dimensions for Chat TextBox -->
+    <dimen name="chat_textbox_min_height">35dp</dimen>
+    <dimen name="chat_textbox_max_height">120dp</dimen>
+    <dimen name="chat_textbox_text_size">16sp</dimen>
+
+    <!-- Dimensions for TextView -->
+    <dimen name="textview_text_size">18sp</dimen>
+    <dimen name="textview_letter_spacing">0.025</dimen>
+    <dimen name="textview_line_spacing">5dp</dimen>
+
+    <!-- Dimensions for Chat TextView -->
+    <dimen name="chat_textview_text_size">16sp</dimen>
+    <dimen name="chat_textview_padding_horizontal">15dp</dimen>
+    <dimen name="chat_textview_padding_vertical">6dp</dimen>
+    <dimen name="chat_username_padding_vertical">2dp</dimen>
+
     <!-- Dimensions for Home Screen -->
-    <dimen name="home_title_margin_bottom">60dp</dimen>
-    <dimen name="home_btn_margin_top">16dp</dimen>
+    <dimen name="home_title_margin_bottom">50dp</dimen>
+    <dimen name="home_btn_margin_top">12dp</dimen>
     <dimen name="home_img_margin_bottom">-13dp</dimen>
     <dimen name="home_app_title_size">32sp</dimen>
 
-    <dimen name="snackbar_text_size">5sp</dimen>
+    <!-- Dimensions for Login and Sign Up Screen-->
+    <dimen name="tb_margin_top">40dp</dimen>
+    <dimen name="tb_margin_top2">20dp</dimen>
+    <dimen name="tb_margin_top3">10dp</dimen>
+    <dimen name="tb_margin_top4">20dp</dimen>
 
+    <!-- Dimensions for Action Bar -->
+    <dimen name="actionbar_margin_top">32dp</dimen>
+    <dimen name="actionbar_divider_height">2dp</dimen>
+    <dimen name="actionbar_title_size">20sp</dimen>
+
+    <!-- Dimentsions for Chat bubble-->
+    <dimen name="chat_bubble_padding">8dp</dimen>
+    <dimen name="chat_bubble_margin">50dp</dimen>
+
+    <!-- Common -->
+    <dimen name="snackbar_text_size">5sp</dimen>
+    <dimen name="app_letter_spacing">0.05</dimen>
 
 
 </resources>
