--- a/app/src/main/res/layout/item_left_chat.xml
+++ b/app/src/main/res/layout/item_left_chat.xml
@@ -25,7 +25,7 @@
         <TextView
             android:id="@+id/username"
             style="@style/AppTheme.Username"
-            android:text="@{chat.userName}"
+            android:text="@{chat.username}"
             android:textAlignment="textStart"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/message"/>
