--- a/app/src/main/res/layout/item_right_chat.xml
+++ b/app/src/main/res/layout/item_right_chat.xml
@@ -24,7 +24,7 @@
         <TextView
             android:id="@+id/username"
             style="@style/AppTheme.Username"
-            android:text="@{chat.userName}"
+            android:text="@{chat.username}"
             android:textAlignment="textStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/message" />
